--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8761
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.instance.hostname=localhost
+
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/,${ADDITIONAL_EUREKA_SERVER_LIST}
