replace bookservice/web eureka client url with full eureka servers list

--- a/bookservice/src/main/resources/application.properties
+++ b/bookservice/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=0
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_ADDRESS}:8761/eureka/
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER_ADDRESS}
