--- a/compose/demoweb.yml
+++ b/compose/demoweb.yml
@@ -5,7 +5,7 @@ services:
     networks:
       - springcloud-overlay
     environment:
-      - EUREKA_SERVER_ADDRESS=eureka
+      - EUREKA_SERVER_ADDRESS=http://eureka1:8761/eureka/,http://eureka2:8761/eureka/,http://eureka3:8761/eureka/
     ports:
       - "8080"
     labels:
@@ -16,7 +16,7 @@ services:
     networks:
       - springcloud-overlay
     environment:
-      - EUREKA_SERVER_ADDRESS=eureka
+      - EUREKA_SERVER_ADDRESS=http://eureka1:8761/eureka/,http://eureka2:8761/eureka/,http://eureka3:8761/eureka/
     labels:
       - "aliyun.logs.bookservice=stdout"
 
